# p4p3r

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  package-lock.json  package.json  restructure.sh  tsconfig.base.json
applets/: sqlite_viewer.html
applications/website/: package-lock.json  package.json  vite-mdx.ts
apps/playground/: inference test.html
apps/web/: tsconfig.app.json
apps/website/: components.json  index.html  tsconfig.app.json  vite.config.ts
dataset/: data.yaml  dataset.db
dataset/labels/: 322  (+13 more)
docs/: ASTSpec.md  AnnotationRules.md  INTRODUCTION.md
models/: README.md
research/: Research_Findings_Layout_Analysis.md
training/: annotation_marker.py  benchmark-model.py  dataset_migrator.py  main.py  model.py  model_benchmarker.py  model_trainer.py  pyproject.toml  s.py  save_annotations.sh  setup.sh  shape_model_convertor.py  synthetic_data_maker.py  trainer.py  training_info.db  transform_labels.py
training/assets/benchmarks/: jelly fish.jsonl  wanda.jsonl
training/assets/databases/: training.db
training/helpers/: annotation-helper.sh  model.py
training/models/: README.md
training/models/0515_0106_n14/: README.md
training/notebooks/: PaperMd_Training.ipynb  ShapeDetectorConvertor.ipynb
training/research/: Research_Findings_YOLOv11_Nano_Inference_Analysis_and_Data_Normalization_Protocols.md
training/research/scripts/: layout.py
training/scripts/: benchmark-model.py
training/src/: database_functions.py  document_scanner.py  model_benchmarker.py  synthetic_data.py
training/src/synthetic_data_renderers/: page_renderer.py
(+51 files in other folders)
