[project]
name = "training"
version = "0.1.0"
description = "All neccesary tools to train,benchmark and create synthetic data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
